Finish Home Page

--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <title>Image Processing API</title>
 </head>
-<body>
-    <h1>Welcome to image proccessing API Project</h1>
-    <h2>Developed by: Nader Sayed</h2>
-    <form action="/api">
-        <button type="submit">Redirect To Processor</button>
-    </form>
 
+<body class="centerElements">
+    <div class="card centerElements">
+        <h1>Welcome to image proccessing API Project</h1>
+        <h2>Developed by: Nader Sayed</h2>
+        <form action="/api">
+            <button type="submit">Redirect To Image Processor</button>
+        </form>
+
+    </div>
     <script></script>
 </body>
+
 </html>
